<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/help_background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.immersionultd.soundaries.Activities.SettingsActivity"
    tools:showIn="@layout/activity_settings">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        >

        <TextView
            android:id="@+id/batStcTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Battery Usage:"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            />

        <TextView
            android:id="@+id/BatLvlTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            tools:text="Fair" />

        <ImageView
            android:id="@+id/overallBatImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="overall Battery"
            android:src="@drawable/ic_bat_good" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp">

        <TextView
        android:id="@+id/accStcTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Location Accuracy:"
        android:textSize="16sp"
        android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/accLvlTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            tools:text="Fair" />

        <ImageView
            android:id="@+id/overallAccImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="overall Battery"
            android:src="@drawable/ic_acc_med" />
    </LinearLayout>

    <TextView
        android:id="@+id/battery_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/battery_hint"
        android:textSize="10sp"
        />

    <LinearLayout
        android:id="@+id/seekbars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/colorAccent"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_time"/>

        <TextView
            android:id="@+id/TimeStcTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Minimum Time Between Update Requests"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_gravity="center"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="16dp"
            >
            <ImageView
                android:id="@+id/batTimeImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_bat_good"
                android:layout_marginTop="8dp" />

            <ImageView
                android:id="@+id/accTimeImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_acc_med"
                android:layout_marginTop="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            >

            <SeekBar
                android:id="@+id/timeSeek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp"
                android:max="9"/>

            <TextView
                android:id="@+id/timeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="x mins"
                android:layout_marginTop="4dp"
                />


        </LinearLayout>

    </LinearLayout>

    <!--distance-->
<!--________________________________________________________________-->


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="@color/colorAccent"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_dist"/>

        <TextView
            android:id="@+id/DistanceStcTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_dist"
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="16dp"
            >
            <ImageView
                android:id="@+id/batDistImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_bat_good"
                android:layout_marginTop="8dp" />

            <ImageView
                android:id="@+id/accDistImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_acc_med"
                android:layout_marginTop="8dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            >

            <SeekBar
                android:id="@+id/distSeek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp"
                android:max="19"/>

            <TextView
                android:id="@+id/distTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="x meters"
                android:layout_marginTop="4dp"
                />


        </LinearLayout>
    </LinearLayout>

    <!--sleep times-->
    <!--________________________________________________________________-->

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp" />

    </LinearLayout>


    <!--location off-->
    <!--________________________________________________________________-->

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp" />

    <Switch
        android:id="@+id/locationUseSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Use Internal location updates only  " />

    <TextView
        android:layout_marginStart="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/only_geocation"/>



</LinearLayout>
